--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,12 +1,13 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
 .main {
-    background-color: #F8F9FA;
-    
+    background-color: #f8f9fa;
+
 }
 
 #loader-div {
@@ -227,6 +228,7 @@
 .blog-input textarea {
     width: 90%;
 }
+
 .blog-input input:focus,
 .blog-input textarea:focus {
     outline-color: #7849f849;
@@ -239,6 +241,66 @@
     resize: none;
 }
 
+.profile-main-div {
+    height: calc(100vh - 160px);
+}
+
+.profile-main-div form {
+    box-shadow: #0000003d 0px 3px 8px;
+    border-radius: 6px;
+    height: 80vh;
+}
+
+.profile-main-div form div {
+    max-width: 350px;
+    max-height: 350px;
+    position: relative;
+}
+
+.profile-main-div form div label {
+cursor: pointer;
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    fill: #7749F8;
+    stroke: #fff;
+}
+input[type="file"]{
+    display: none;
+}
+
+
+.profile-main-div div img {
+    width: 100%;
+    height: auto;
+    border-radius: 25px;
+}
+
+.profile-main-div input {
+    width: 60%;
+}
+
+.profile-main-div label {
+    position: relative;
+    width: 66%;
+}
+
+.profile-main-div label input {
+    width: 90%;
+}
+
+.profile-main-div label svg {
+    cursor: pointer;
+    position: absolute;
+    bottom: 10px;
+    right: 0;
+    fill: #7749F8;
+    stroke: #fff;
+
+}
+
+
+
 @media (max-width : 575px) {
     .drop {
         display: block;
@@ -248,19 +310,41 @@
         display: none !important;
     }
 
-    .card ,.blog-input{
+    .card,
+    .blog-input {
         width: 95%;
     }
 
     .login-input-container,
-    .signup-input-container {
+    .signup-input-container,
+    .profile-main-div form {
         width: 85%;
     }
-    .card-title{
+
+    .card-title {
         width: 100%;
     }
-    .card-subtitle{
-        
+
+    .blog-input {
+        box-shadow: #0000003d 0px 3px 8px;
+        height: 40vh;
+
     }
-    
+
+    .profile-main-div img {
+        width: 19rem;
+        height: 19rem;
+        border-radius: 25px;
+    }
+
+    .profile-main-div input {
+        width: 90%;
+    }
+
+    .profile-main-div label {
+
+        width: 100%;
+    }
+
+
 }
