--- a/CSS/index.css
+++ b/CSS/index.css
@@ -17,6 +17,7 @@
     height: 100vh;
     display: none;
     place-items: center;
+    z-index: 100;
 }
 
 .loader {
@@ -67,8 +68,7 @@
         width: 15px;
         transform: translateX(-100%)
     }
-}
-
+}     
 .nav {
     position: sticky;
     height: 60px;
@@ -173,10 +173,12 @@
     border-color: #7849f849;
     box-shadow: 0 0 0 0.25rem #7849f849;
 }
-.swal2-confirm{
+
+.swal2-confirm {
     background-color: #7749F8;
 }
-.swal2-confirm{
+
+.swal2-confirm {
     background-color: #7749F8 !important;
 }
 
@@ -251,34 +253,35 @@
     height: calc(100vh - 160px);
 }
 
-.profile-main-div div {
+.profile-main-div>div {
     box-shadow: #0000003d 0px 3px 8px;
     border-radius: 6px;
     height: 80vh;
 }
 
-.profile-main-div div div {
+.profile-main-div div .innerDiv {
     max-width: 350px;
     max-height: 350px;
     position: relative;
 }
 
-.profile-main-div div div label {
-cursor: pointer;
+.profile-main-div div .innerDiv label {
+    cursor: pointer;
     position: absolute;
     right: 16px;
     bottom: 16px;
     fill: #7749F8;
     stroke: #fff;
 }
-input[type="file"]{
+
+input[type="file"] {
     display: none;
 }
 
 
 .profile-main-div div img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 25px;
 }
 
